Pull & push trial-2

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
    <title>Group Project</title>
 </head>
 <body>
-   <h2>Zomato</h2>
+   <h2>Tasty 😋</h2><p> Welcome to our page </p>
 </body>
 </html>
