Added Header & Navbar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="stylesheet" href="styles/styles.css">
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Group Project</title>
 </head>
 <body>
-   <h2>Tasty 😋</h2><p> Welcome to our page </p>
+
+   <header>
+      <div class="banner">
+         <div class="partner">SE Factory Partner's</div>
+         <button>Contact Us</button>
+      </div>
+      <div class="welcome">
+         <nav>
+            <div class="logo">Tasty Logo</div>
+            <ul>
+               <li>Home</li>
+               <li>About Us</li>
+               <li>FAQs</li>
+               <li>Fb</li>
+               <li>Inst</li>
+               <li>Twit</li>
+               <li><a href="#" id="Super_Hungry">Super Hungry</a></li>
+            </ul>
+         </nav>
+      </div>
+   </header>
+
 </body>
 </html>
