html/ Adding the slogan + search by typing,category

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <header>
       <div class="banner">
          <div class="partner">SE Factory Partner's</div>
-         <button>Contact Us</button>
+         <button>Sign up</button>
       </div>
       <div class="welcome">
          <nav>
@@ -28,6 +28,14 @@
             </ul>
          </nav>
       </div>
+
+      <!--Adding the slogan + search by typing or category-->
+      <section class="slogan-want-container">
+         <h1 class="slogan">Your favorite foods in one place</h1>
+         <input type="text" class="want" placeholder="I want to make.." >
+         <!--Note: categories must be added-->
+         <button class="categories want ">Categories</button>
+       </section>
    </header>
 
 </body>
