--- a/index.html
+++ b/index.html
@@ -38,5 +38,37 @@
        </section>
    </header>
 
+      <!--Adding the restuarant category section-->
+      <!--Note: the images to be organized well-->
+   <section id="restaurant-category">
+      <h1 id="restaurant-category-header">Restaurant Categories</h1>
+      <div class="restaurant-category-imgs">
+         <div>
+            <h2>Italian Food</h2>
+            <img src="public/italian-food.jpg">
+         </div>
+         <div>
+            <h2>Arabic Food</h2>
+            <img src="public/arabic-food.jpg">
+         </div>
+         <div>
+            <h2>Spanish Food</h2>
+            <img src="public/spanish-food.png">
+         </div>
+         <div>
+            <h2>French Food</h2>
+            <img src="public/French-food.png">
+         </div>
+         <div>
+            <h2>Desserts</h2>
+            <img src="public/desert.jpg">
+         </div>
+         <div>
+            <h2>Drinks</h2>
+            <img src="public/drinks.png">
+         </div>
+      </div>   
+      </section>
+
 </body>
 </html>
