Finished Header Section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="styles/styles.css">
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,6 +30,24 @@
                <li><a href="#" id="Super_Hungry">Super Hungry</a></li>
             </ul>
          </nav>
+      </div>
+      <div class="slogan">
+         <h2>We saved you a seat !</h2>
+         <h4>We’re always in the mood for food</h4>
+         <p>Beirut finest</p>
+      </div>
+      <div class="header-search">
+         <input type="text" placeholder="Your Favorite Restaurant ..">
+         <select name="food-category" id="food-category">Categories
+            <option value="burgers">Burgers</option>
+            <option value="SeadFood">SeadFood</option>
+            <option value="Pizzas">Pizzas</option>
+            <option value="Lebanese">Lebanese</option>
+            <option value="Sushi">Sushi</option>
+            <option value="Asian">Asian</option>
+            <option value="Drinks">Drinks</option>
+         </select>
+         <button>search</button>
       </div>
    </header>
 
