--- a/index.html
+++ b/index.html
@@ -86,5 +86,36 @@
       </div>   
       </section>
 
+      <!--Get mobile application section-->
+      <section id="tasty-mobile-app">
+         <div class="app-both-section">
+
+            <div class="img-section">
+               <img src="public/zomata-app.png" class="app-img">
+            </div>
+
+            <div class="app-section">
+               <h2>Get the Tasty App</h2>
+               <p class="link-para">A link will be sent to you,open it on your phone to download the application</p>
+               <div class="app-info">
+                  <input type="radio" id="email-btn" name="fav_language" value="Email">
+                  <label for="Email" id="email-label">Email</label><br>
+                  <input type="radio" id="phone-btn" name="fav_language" value="Phone">
+                  <label for="Phone" id="phone-label">Phone</label><br>
+               </div>
+               <div>
+               <input type="text" class="email-input" placeholder="Email" >
+               <button type="button" class="share-btn">Share app link</button>
+               </div>
+               <p class="download-para">Download app from</p>
+               <div class="application-store">
+                  <img src="public/google-play.webp" class="google-play-img">
+                  <img src="public/app-store.webp" class="apple-play-img">
+               </div>
+            </div>
+         </div>
+
+      </section>
+
 </body>
 </html>
