Added Restaurants Section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="styles/styles.css">
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,13 +21,13 @@
          <nav>
             <div class="logo">Tasty Logo</div>
             <ul>
-               <li>Home</li>
-               <li>About Us</li>
-               <li>FAQs</li>
-               <li>Fb</li>
-               <li>Inst</li>
-               <li>Twit</li>
-               <li><a href="#" id="Super_Hungry">Super Hungry</a></li>
+               <a href="#">Home</a>
+               <a href="#">About Us</a>
+               <a href="#">FAQs</a>
+               <a href="#">Fb</a>
+               <a href="#">Inst</a>
+               <a href="#">Twit</a>
+               <a><a href="#" id="Super_Hungry">Super Hungry</a></li>
             </ul>
          </nav>
       </div>
@@ -51,5 +51,16 @@
       </div>
    </header>
 
+   <section class="restaurants-categories">
+      <h2 class="restaurants-title">Restaurants Categories</h2>
+      <p class="restaurants-title">'What would you like to eat today ?'</p> 
+      <div class="restaurants">
+         <div><p>Italian</p><img class="resto" src="/public/italian-restaurants-marbella.jpg" alt=""></div>
+         <div><p>SeaFood</p><img class="resto" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
+         <div><p>Pizzas</p><img class="resto" src="/public/Screenshot (46).png" alt=""></div>
+      </div>
+      
+      </div>
+   </section>
 </body>
 </html>
