Added 3 Restaurants types

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
          <div><p>SeaFood</p><img class="resto" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
          <div><p>Pizzas</p><img class="resto" src="/public/Screenshot (46).png" alt=""></div>
       </div>
-      
+      <div class="restaurants">
+         <div><p>Burgers</p><img class="resto" src="/public/Burgers.jpg" alt=""></div>
+         <div><p>Oriental</p><img class="resto" src="./public/Arabicbest.jpg" alt=""></div>
+         <div><p>Deserts</p><img class="resto" src="/public/desert.jpg" alt=""></div> 
       </div>
    </section>
 </body>
