--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Group Project</title>
+   <script src="https://kit.fontawesome.com/9d1b4ceae1.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -111,6 +112,18 @@
       </div>
 
       </section>
+
+      <!--Footer section-->
+      <div class="footer">
+         <div class="footer-para"><p>You're always welcome..</p></div>
+
+         <div id="social-icons">
+            <a href="#"><i class="fa-brands fa-linkedin-in fa-xl" style="color:black"></i></a> 
+            <a href="#"><i class="fa-brands fa-facebook-f fa-xl" style="color:black"></i></a> 
+            <a href="#"><i class="fa-brands fa-instagram fa-xl" style="color:black"></i></a> 
+            <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color:black"></i> </a>
+         </div>
+     </div> 
 
 </body>
 </html>
