--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                <a href="#">Home</a>
                <a href="#">About Us</a>
                <a href="#">FAQs</a>
-               <a href="#">Fb</a>
-               <a href="#">Inst</a>
-               <a href="#">Twit</a>
+               <a href="#"><i class="fa-brands fa-facebook"></i></a>
+               <a href="#"><i class="fa-brands fa-instagram"></i></a>
+               <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
                <a><a href="#" id="Super_Hungry">Super Hungry</a></li>
             </ul>
          </nav>
@@ -123,7 +123,7 @@
             <a href="#"><i class="fa-brands fa-instagram fa-xl" style="color:black"></i></a> 
             <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color:black"></i> </a>
          </div>
-     </div> 
-
+      </div> 
+   
 </body>
 </html>
