html index// Assigning id to several elements

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
    <!-- Add animation on loading page // SetTimeout first  -->
 
-   <header>
+   <header id="landing-header">
       <div class="banner">
          <div class="partner">SE Factory Partner's</div>
-         <button>Sign up</button>
+         <button id="signup-btn">Sign up</button>
       </div>
       <div class="welcome">
          <nav>
