login html// Filling the login page with data

--- a/pages/login.html
+++ b/pages/login.html
@@ -9,7 +9,25 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+    <div>
+        <h1 id="login-head">Please fill all fields</h1>
+        <div class="login-row">
+            <div><img src="../public/logo.png" id="login-profile-pic"></div>
+            <div>
+                <div>
+                    <h3>Email</h3>
+                    <input id="login-email-input" type="email" placeholder="example@gmail.com"  />
+                </div>
 
+                <div>
+                    <h3>Password </h3>
+                    <input id="login-password-input" type="password" placeholder="password"  />
+                </div>
+
+                <div><input id="login-create-account" type="button" value="login"  /></div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
