--- a/pages/signup.html
+++ b/pages/signup.html
@@ -10,5 +10,33 @@
 </head>
 <body>
 
+    <div class="container">
+        <h1 id="signup-head">Please fill all fields</h1>
+        <div class="signup-row">
+            <div><img src="../public/R .png" id="signup-profile-pic"></div>
+
+            <div>
+                <div>
+                    <h3>Username</h3>
+                    <input id="signup-username-input" type="text" placeholder="username"  />
+                </div>
+
+                <div>
+                    <h3>Email</h3>
+                    <input id="signup-email-input" type="email" placeholder="example@gmail.com"  />
+                </div>
+
+                <div>
+                    <h3>Password </h3>
+                    <input id="signup-password-input" type="password" placeholder="password"  />
+                </div>
+
+                <div>
+                    <input id="signup-create-account" type="button" value="Create Account"  />
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
