html user-profile// Adding the header,main section, and footer details

--- a/pages/user-profile.html
+++ b/pages/user-profile.html
@@ -13,6 +13,39 @@
 </head>
 <body>
 
+    <header>
+        <div class="userprofile-banner">
+           <button>Home</button>
+        </div>
+     </header>
+
+     <div class="userprofile-container">
+
+        <div class="userprofile-row">
+           <div><img src="../public/logo.png" id="userprofile-profile-pic"></div>
+           <div>
+              <div><h3>User username</h3></div>
+              <div><h3>User email</h3></div>
+              <div><h3> Change password </h3></div>
+              <div>
+                 <input id="userprofile-create-account" type="button" value="Edit profile"  />
+              </div>
+           </div>
+        </div>
+  
+     </div>
+
+     <!--Footer section-->
+   <div class="footer">
+    <div class="footer-para"><p>You're always welcome..</p></div>
+
+    <div id="social-icons">
+       <a href="#"><i class="fa-brands fa-linkedin-in fa-xl" style="color:black"></i></a> 
+       <a href="#"><i class="fa-brands fa-facebook-f fa-xl" style="color:black"></i></a> 
+       <a href="#"><i class="fa-brands fa-instagram fa-xl" style="color:black"></i></a> 
+       <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color:black"></i> </a>
+    </div>
+ </div>
 
 </body>
 </html>
