html admin-profile// Inserting the header,main section, and footer details

--- a/pages/admin-profile.html
+++ b/pages/admin-profile.html
@@ -12,7 +12,42 @@
    <script src="https://kit.fontawesome.com/9d1b4ceae1.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    
+    <header>
+        <div class="admin-pr-banner">
+           <button>Home</button>
+        </div>
+     </header>
+   
+     <div class="admin-pr-container">
+        <div class="admin-pr-row">
+           <div>
+              <img src="../public/logo.png" id="admin-pr-profile-pic">
+           </div>
+           <div>
+              <div><h3>Admin username</h3></div>
+              <div><h3>Admin email</h3></div>
+              <div><h3> Change password </h3></div>
+              <div><input id="admin-pr-create-account" type="button" value="Edit profile"/></div>
+           </div>
+        </div>
+     </div>
+     
+     <div class="admin-pr-add-edit">
+        <button>Add New Restaurant</button>
+        <button>Edit Resturant</button>
+     </div>
+  
+     <!--Footer section-->
+     <div class="footer">
+        <div class="footer-para"><p>You're always welcome..</p></div>
+        <div id="social-icons">
+           <a href="#"><i class="fa-brands fa-linkedin-in fa-xl" style="color:black"></i></a> 
+           <a href="#"><i class="fa-brands fa-facebook-f fa-xl" style="color:black"></i></a> 
+           <a href="#"><i class="fa-brands fa-instagram fa-xl" style="color:black"></i></a> 
+           <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color:black"></i> </a>
+        </div>
+     </div> 
 
 </body>
 </html>
