--- a/pages/resto.html
+++ b/pages/resto.html
@@ -13,6 +13,53 @@
 </head>
 <body>
  
+   <header id="resto-header">
+        <div class="banner">
+        <button>Profile</button>
+        <button>Home</button>
+        </div>
+    
+        <div class="resto-slogan">
+        <h2>Resto Name</h2>
+        <p class="restaurants-title" style="text-align: left; color: black;">'Resto Category'</p> 
+        </div>
+    </header>
+
+    <section class="rating-review">
+       <div class="rating">
+          <h3>Ratings</h3>
+          <!--Stars must be added-->
+          <p>stars</p>
+       </div>
+
+       <div class="review">
+          <h3>Reviews</h3>
+          <p>I visit this place regularly just to order the same chicken alfredo platter each time it’s simply amazing ! But this time we also decided to try their burger but honestly it wasn’t my favorite, and the lettuce wasn’t fresh at all. </p>
+       </div>
+
+       <div class="user-rate">
+          <button>Rate your experience</button>
+       </div>
+       
+       <div class="user-review">
+          <h3>Write your review</h3>
+          <input id="review" type="text" placeholder="I would .."/>
+          <br/>
+          <button>Send review</button>
+       </div>
+    </section>
+
+    <!--Footer section-->
+    <div class="footer" style="margin-top:5%">
+       <div class="footer-para"><p>You're always welcome..</p></div>
+
+       <div id="social-icons">
+          <a href="#"><i class="fa-brands fa-linkedin-in fa-xl" style="color:black"></i></a> 
+          <a href="#"><i class="fa-brands fa-facebook-f fa-xl" style="color:black"></i></a> 
+          <a href="#"><i class="fa-brands fa-instagram fa-xl" style="color:black"></i></a> 
+          <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color:black"></i> </a>
+       </div>
+   </div>
 
 </body>
 </html>
