--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color:black"></i> </a>
          </div>
       </div> 
-   
+      <script src="app.js"></script>
+
 </body>
 </html>
