--- a/pages/resto.html
+++ b/pages/resto.html
@@ -43,7 +43,7 @@
        
        <div class="user-review">
           <h3>Write your review</h3>
-          <input id="review" type="text" placeholder="I would .."/>
+          <textarea id="review-area" rows="8" cols="100"></textarea>
           <br/>
           <button>Send review</button>
        </div>
