--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <header id="landing-header">
       <div class="banner">
          <div class="partner">SE Factory Partner's</div>
-         <button id="signup-btn">Sign up</button>
+         <button id="signup-btn" onclick="window.location.href='pages/signup.html';">Sign up</button>
       </div>
       <div class="welcome">
          <nav>
