--- a/pages/user-profile.html
+++ b/pages/user-profile.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="userprofile-banner">
-           <button>Home</button>
+           <button onclick="window.location.href='../index.html';">Home</button>
         </div>
      </header>
 
