html category// Linking the home & profile buttons with the user-profile html

--- a/pages/category.html
+++ b/pages/category.html
@@ -15,8 +15,8 @@
     
     <header id="category-header">
         <div class="banner">
-           <button>Profile</button>
-           <button>Home</button>
+           <button onclick="window.location.href='user-profile.html';">Profile</button>
+           <button onclick="window.location.href='../index.html';">Home</button>
         </div>
      
         <div class="category-slogan">
