--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       <h2 class="restaurants-title">Restaurants Categories</h2>
       <p class="restaurants-title">'What would you like to eat today ?'</p> 
       <div class="restaurants">
-         <div><p>Italian</p><img class="resto" src="/public/italian-restaurants-marbella.jpg" alt=""></div>
-         <div><p>SeaFood</p><img class="resto" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
-         <div><p>Pizzas</p><img class="resto" src="/public/pizza.jpg" alt=""></div>
+         <div><p>Italian</p><img class="resto" id="italian-food" src="/public/italian-restaurants-marbella.jpg" alt=""></div>
+         <div><p>SeaFood</p><img class="resto" id="sea-food" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
+         <div><p>Pizzas</p><img class="resto" id="pizza-food" src="/public/pizza.jpg" alt=""></div>
       </div>
       <div class="restaurants">
-         <div><p>Burgers</p><img class="resto" src="/public/Burgers.jpg" alt=""></div>
-         <div><p>Oriental</p><img class="resto" src="./public/Arabicbest.jpg" alt=""></div>
-         <div><p>Deserts</p><img class="resto" src="/public/desert.jpg" alt=""></div> 
+         <div><p>Burgers</p><img class="resto" id="burger-food" src="/public/Burgers.jpg" alt=""></div>
+         <div><p>Oriental</p><img class="resto" id="oriental-food" src="./public/Arabicbest.jpg" alt=""></div>
+         <div><p>Deserts</p><img class="resto" id="deserts-food" src="/public/desert.jpg" alt=""></div> 
       </div>
    </section>
 
