--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -18,27 +15,27 @@
             <div>
                 <div>
                     <h3>Username</h3>
-                    <input id="signup-username-input" type="text" placeholder="username"  />
+                    <input id="username" type="text" placeholder="username"  />
                 </div>
 
                 <div>
                     <h3>Email</h3>
-                    <input id="signup-email-input" type="email" placeholder="example@gmail.com"  />
+                    <input id="email" type="email" placeholder="example@gmail.com"  />
                 </div>
 
                 <div>
                     <h3>Password </h3>
-                    <input id="signup-password-input" type="password" placeholder="password"  />
+                    <input id="pass" type="password" placeholder="password"  />
                 </div>
 
                 <div>
-                    <input id="signup-create-account" type="button" value="Create Account"  />
+                    <input id="bttn" type="button" value="Create Account"  />
                 </div>
             </div>
         </div>
     </div>
 
-<script src="signup.js"></script>
+<script src="../scripts/sign-up.js"></script>
 
 </body>
 </html>
