--- a/pages/add-resto.html
+++ b/pages/add-resto.html
@@ -9,6 +9,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Add Resto</title>
+   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
    <script src="https://kit.fontawesome.com/9d1b4ceae1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -26,15 +27,17 @@
             <div><input type="file"/></div>
 
             <div>
-                <div><input id="add-resto-info" type="text" placeholder="resto name"/></div>
-                <div><input id="add-resto-info" type="text" placeholder="resto category"/></div>
-                <div><input id="add-resto-info" type="text" placeholder="resto location"/></div>
-                <div><input id="add-resto-info" type="text" placeholder="resto description"/></div>
-                <div><input id="add-resto-info" type="number" placeholder="resto number"/></div>
+                <div><input class="add-resto-info" id="resto-name" type="text" placeholder="resto name"/></div>
+                <div><input class="add-resto-info" id="resto-category" type="text" placeholder="resto category"/></div>
+                <div><input class="add-resto-info" id="resto-location" type="text" placeholder="resto location"/></div>
+                <div><input class="add-resto-info" id="resto-description" type="text" placeholder="resto description"/></div>
+                <div><input class="add-resto-info" id="resto-number" type="number" placeholder="resto number"/></div>
                 <div><input id="add-resto-info-btn" type="button" value="Add Resto"/></div>
             </div>
         </div>
     </div>
+
+<script src="addresto.js"></script>
 
 </body>
 </html>
