Linked login Back-Front end

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="container">
-        <h1 id="signup-head">Please fill all fields</h1>
+        <h1 id="signup-head">Please sign Up</h1>
         <div class="signup-row">
             <div><img src="../public/R .png" id="signup-profile-pic"></div>
 
