--- a/pages/login.html
+++ b/pages/login.html
@@ -16,20 +16,20 @@
             <div>
                 <div>
                     <h3>Email</h3>
-                    <input id="login-email-input" type="email" placeholder="example@gmail.com"  />
+                    <input id="email" type="email" placeholder="example@gmail.com"  />
                 </div>
 
                 <div>
                     <h3>Password </h3>
-                    <input id="login-password-input" type="password" placeholder="password"  />
+                    <input id="pass" type="password" placeholder="password"  />
                 </div>
 
-                <div><input id="login-create-account" type="button" value="login"  /></div>
+                <div><input id="bttn" type="button" value="login"  /></div>
             </div>
         </div>
     </div>
 
-<script src="login.js"></script>
+<script src="../scripts/login.js"></script>
 
 </body>
 </html>
