Added details to local storage

--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
             <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color:black"></i> </a>
          </div>
       </div> 
-      <script src="app.js"></script>
-
+      <script src="./scripts/app.js"></script>
 </body>
 </html>
