Add new restaurant functionality

--- a/pages/add-resto.html
+++ b/pages/add-resto.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="../styles/styles.css">
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Add Resto</title>
-   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-   <script src="https://kit.fontawesome.com/9d1b4ceae1.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Resto</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://kit.fontawesome.com/9d1b4ceae1.js" crossorigin="anonymous"></script>
 </head>
 <body>
- 
+
     <header>
         <div class="banner">
         <button onclick="window.location.href='user-profile.html';">Profile</button>
         <button onclick="window.location.href='../index.html';">Home</button>
         </div>
-   </header>
+    </header>
 
     <div class="add-resto-container">
         <div class="add-resto-row">
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-<script src="addresto.js"></script>
+<script src="../scripts/add_resto.js"></script>
 
 </body>
 </html>
