login,signup// Fixing the link of html with css

--- a/pages/login.html
+++ b/pages/login.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <div>
-        <h1 id="login-head">Please fill all fields</h1>
+        <h1 id="login-head">Please insert you account info</h1>
         <div class="login-row">
-            <div><img src="../public/logo.png" id="login-profile-pic"></div>
+            <div><img src="../public/R .png" id="login-profile-pic"></div>
             <div>
                 <div>
                     <h3>Email</h3>
-                    <input id="email" type="email" placeholder="example@gmail.com"  />
+                    <input id="email" class="login-email-input" type="email" placeholder="example@gmail.com"  />
                 </div>
 
                 <div>
                     <h3>Password </h3>
-                    <input id="pass" type="password" placeholder="password"  />
+                    <input id="pass" class="login-password-input" type="password" placeholder="password"  />
                 </div>
 
-                <div><input id="bttn" type="button" value="login"  /></div>
+                <div><input id="bttn" class="login-account" type="button" value="login"  /></div>
             </div>
         </div>
     </div>
