--- a/pages/signup.html
+++ b/pages/signup.html
@@ -15,21 +15,21 @@
             <div>
                 <div>
                     <h3>Username</h3>
-                    <input id="username" type="text" placeholder="username"  />
+                    <input id="username" class="signup-username-input" type="text" placeholder="username"  />
                 </div>
 
                 <div>
                     <h3>Email</h3>
-                    <input id="email" type="email" placeholder="example@gmail.com"  />
+                    <input id="email" class="signup-email-input" type="email" placeholder="example@gmail.com"  />
                 </div>
 
                 <div>
                     <h3>Password </h3>
-                    <input id="pass" type="password" placeholder="password"  />
+                    <input id="pass" class="signup-password-input" type="password" placeholder="password"  />
                 </div>
 
                 <div>
-                    <input id="bttn" type="button" value="Create Account"  />
+                    <input id="bttn" class="signup-create-account" type="button" value="Create Account"  />
                 </div>
             </div>
         </div>
