--- a/pages/login.html
+++ b/pages/login.html
@@ -9,23 +9,24 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+    
     <div>
         <h1 id="login-head">Please insert you account info</h1>
         <div class="login-row">
-            <div><img src="../public/R .png" id="login-profile-pic"></div>
-            <div>
+            <div class="fix">
+                <div><img src="../public/R .png" id="login-profile-pic"></div>
                 <div>
-                    <h3>Email</h3>
-                    <input id="email" class="login-email-input" type="email" placeholder="example@gmail.com"  />
+                    <div>
+                        <h3>Email</h3>
+                        <input id="email" class="login-email-input" type="email" placeholder="example@gmail.com"  />
+                    </div>
+                    <div>
+                        <h3>Password </h3>
+                        <input id="pass" class="login-password-input" type="password" placeholder="password"  />
+                    </div>
                 </div>
-
-                <div>
-                    <h3>Password </h3>
-                    <input id="pass" class="login-password-input" type="password" placeholder="password"  />
-                </div>
-
-                <div><input id="bttn" class="login-account" type="button" value="login"  /></div>
             </div>
+            <div><input id="bttn" class="login-account" type="button" value="login"  /></div>
         </div>
     </div>
 
