--- a/pages/signup.html
+++ b/pages/signup.html
@@ -10,28 +10,24 @@
     <div class="container">
         <h1 id="signup-head">Please sign Up</h1>
         <div class="signup-row">
-            <div><img src="../public/R .png" id="signup-profile-pic"></div>
-
-            <div>
+            <div class="fix">
+                <div><img src="../public/R .png" id="signup-profile-pic"></div>
                 <div>
-                    <h3>Username</h3>
-                    <input id="username" class="signup-username-input" type="text" placeholder="username"  />
-                </div>
-
-                <div>
-                    <h3>Email</h3>
-                    <input id="email" class="signup-email-input" type="email" placeholder="example@gmail.com"  />
-                </div>
-
-                <div>
-                    <h3>Password </h3>
-                    <input id="pass" class="signup-password-input" type="password" placeholder="password"  />
-                </div>
-
-                <div>
-                    <input id="bttn" class="signup-create-account" type="button" value="Create Account"  />
+                    <div>
+                        <h3>Username</h3>
+                        <input id="username" class="signup-username-input" type="text" placeholder="username"  />
+                    </div>
+                    <div>
+                        <h3>Email</h3>
+                        <input id="email" class="signup-email-input" type="email" placeholder="example@gmail.com"  />
+                    </div>
+                    <div>
+                        <h3>Password </h3>
+                        <input id="pass" class="signup-password-input" type="password" placeholder="password"  />
+                    </div>
                 </div>
             </div>
+            <div><input id="bttn" class="signup-create-account" type="button" value="Create Account"  /></div>
         </div>
     </div>
 
