--- a/pages/add-resto.html
+++ b/pages/add-resto.html
@@ -31,10 +31,9 @@
                         <option value="burgers">Burgers</option>
                         <option value="SeadFood">SeadFood</option>
                         <option value="Pizzas">Pizzas</option>
-                        <option value="Lebanese">Lebanese</option>
-                        <option value="Sushi">Sushi</option>
-                        <option value="Asian">Asian</option>
-                        <option value="Drinks">Drinks</option>
+                        <option value="Oriental">Oriental</option>
+                        <option value="Italian">Italian</option>
+                        <option value="Dessert">Dessert</option>
                     </select>
                 </div>
                 <div><input class="add-resto-info" id="resto-location" type="text" placeholder="resto location"/></div>
