--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Group Project</title>
+   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
    <script src="https://kit.fontawesome.com/9d1b4ceae1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -60,11 +61,11 @@
       <p class="restaurants-title">'What would you like to eat today ?'</p> 
       <div class="restaurants">
          <div><p>Italian</p><img class="resto" id="italian-food" src="/public/italian-restaurants-marbella.jpg" alt=""></div>
-         <div><p>SeaFood</p><img class="resto" id="sea-food" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
+         <div><p>SeaFood</p><img class="resto" id="SeaFood" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
          <div><p>Pizzas</p><img class="resto" id="pizza-food" src="/public/pizza.jpg" alt=""></div>
       </div>
       <div class="restaurants">
-         <div><p>Burgers</p><img class="resto" id="burger-food" src="/public/Burgers.jpg" alt=""></div>
+         <div><p>Burgers</p><img class="resto" id="junky" src="/public/Burgers.jpg" alt=""></div>
          <div><p>Oriental</p><img class="resto" id="oriental-food" src="./public/Arabicbest.jpg" alt=""></div>
          <div><p>Deserts</p><img class="resto" id="deserts-food" src="/public/desert.jpg" alt=""></div> 
       </div>
