--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
       <div class="header-search">
          <input type="text" placeholder="Your Favorite Restaurant ..">
          <select name="food-category" id="food-category">Categories
-            <option value="burgers">Burgers</option>
+            <option value="Burgers">Burgers</option>
+            <option value="Italian">Italian</option>
             <option value="SeadFood">SeadFood</option>
             <option value="Pizzas">Pizzas</option>
-            <option value="Lebanese">Lebanese</option>
-            <option value="Sushi">Sushi</option>
-            <option value="Asian">Asian</option>
-            <option value="Drinks">Drinks</option>
+            <option value="Oriental">Oriental</option>
+            <option value="Desert">Desert</option>
          </select>
          <button>search</button>
       </div>
@@ -60,14 +59,14 @@
       <h2 class="restaurants-title">Restaurants Categories</h2>
       <p class="restaurants-title">'What would you like to eat today ?'</p> 
       <div class="restaurants">
-         <div><p>Italian</p><img class="resto" id="italian-food" src="/public/italian-restaurants-marbella.jpg" alt=""></div>
+         <div><p>Italian</p><img class="resto" id="Italian" src="/public/italian-restaurants-marbella.jpg" alt=""></div>
          <div><p>SeaFood</p><img class="resto" id="SeaFood" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
-         <div><p>Pizzas</p><img class="resto" id="pizza-food" src="/public/pizza.jpg" alt=""></div>
+         <div><p>Pizzas</p><img class="resto" id="Pizza" src="/public/pizza.jpg" alt=""></div>
       </div>
       <div class="restaurants">
-         <div><p>Burgers</p><img class="resto" id="junky" src="/public/Burgers.jpg" alt=""></div>
-         <div><p>Oriental</p><img class="resto" id="oriental-food" src="./public/Arabicbest.jpg" alt=""></div>
-         <div><p>Deserts</p><img class="resto" id="deserts-food" src="/public/desert.jpg" alt=""></div> 
+         <div><p>Burgers</p><img class="resto" id="Burgers" src="/public/Burgers.jpg" alt=""></div>
+         <div><p>Oriental</p><img class="resto" id="Oriental" src="./public/Arabicbest.jpg" alt=""></div>
+         <div><p>Deserts</p><img class="resto" id="Desert" src="/public/desert.jpg" alt=""></div> 
       </div>
    </section>
 
