Catch restaurants details

--- a/pages/category.html
+++ b/pages/category.html
@@ -4,7 +4,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="../styles/styles.css">
+   <link rel="stylesheet" href="../styles/category.css">
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,12 +21,12 @@
       </div>
    
       <div class="category-slogan">
-         <h2 id="category-name">Category</h2>
+         <h2 id="category-name"></h2>
          <p class="restaurants-title" style="color:white">'From where would you like to eat today ?'</p>
       </div>
    </header>
    
-   <section class="restaurants-categories">
+   <!-- <section class="restaurants-categories">
       <div class="restaurants">
          <div><p>Zaatar w Zeit</p><img class="resto" src="../public/zz.jfif" alt=""></div>
          <div><p>Kfc</p><img class="resto" src="../public/kfc.jfif" alt=""></div>
@@ -36,7 +36,9 @@
          <div><p>Macdonalds</p><img class="resto" src="../public/mc.jfif" alt=""></div>
          <div><p>Roadster</p><img class="resto" src="../public/roadster.jfif" alt=""></div>
       </div>
-   </section>
+   </section> -->
+
+   <section id="restaurants"></section>
 
    <!--Footer section-->
    <div class="footer" style="margin-top:10%">
