Editing the category's page style

--- a/pages/add-resto.html
+++ b/pages/add-resto.html
@@ -29,7 +29,7 @@
                 <div>
                     <select name="resto-category" class="add-resto-info" id="resto-category">Resto category
                         <option value="burgers">Burgers</option>
-                        <option value="SeadFood">SeadFood</option>
+                        <option value="SeaFood">SeaFood</option>
                         <option value="Pizzas">Pizzas</option>
                         <option value="Oriental">Oriental</option>
                         <option value="Italian">Italian</option>
