Linked Categories to Restaurants

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <option value="Burgers">Burgers</option>
             <option value="Italian">Italian</option>
             <option value="SeadFood">SeadFood</option>
-            <option value="Pizzas">Pizzas</option>
+            <option value="Pizza">Pizzas</option>
             <option value="Oriental">Oriental</option>
             <option value="Desert">Desert</option>
          </select>
