--- a/pages/add-resto.html
+++ b/pages/add-resto.html
@@ -30,7 +30,7 @@
                     <select name="resto-category" class="add-resto-info" id="resto-category">Resto category
                         <option value="burgers">Burgers</option>
                         <option value="SeaFood">SeaFood</option>
-                        <option value="Pizzas">Pizzas</option>
+                        <option value="Pizza">Pizza</option>
                         <option value="Oriental">Oriental</option>
                         <option value="Italian">Italian</option>
                         <option value="Dessert">Dessert</option>
