--- a/pages/resto.html
+++ b/pages/resto.html
@@ -35,7 +35,7 @@
 
       <div class="review">
          <h3>Reviews</h3>
-         <p>I visit this place regularly just to order the same chicken alfredo platter each time it’s simply amazing ! But this time we also decided to try their burger but honestly it wasn’t my favorite, and the lettuce wasn’t fresh at all. </p>
+         <p>Append element here </p>
       </div>
 
       <div class="user-rate">
@@ -46,7 +46,7 @@
          <h3>Write your review</h3>
          <textarea id="review-area" rows="8" cols="100"></textarea>
          <br/>
-         <button>Send review</button>
+         <button id="send_review">Send review</button>
       </div>
    </section>
 
