Retrieved restaurant reviews

--- a/pages/resto.html
+++ b/pages/resto.html
@@ -28,14 +28,16 @@
 
    <section class="rating-review">
       <div class="rating">
-         <h3>Ratings</h3>
-         <!--Stars must be added-->
-         <p>stars</p>
+         <h3 id="rating">Ratings</h3>
+         <h3 id="description">Description</h3>
+         <h3 id="location">Location</h3>
+         <h3 id="number">Number</h3>
+         
       </div>
 
-      <div class="review">
+      <div id="review_section" class="review">
          <h3>Reviews</h3>
-         <p>Append element here </p>
+         <hr>
       </div>
 
       <div class="user-rate">
