--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <option value="SeadFood">SeadFood</option>
             <option value="Pizza">Pizzas</option>
             <option value="Oriental">Oriental</option>
-            <option value="Desert">Desert</option>
+            <option value="Dessert">Dessert</option>
          </select>
          <button>search</button>
       </div>
@@ -66,7 +66,7 @@
       <div class="restaurants">
          <div><p>Burgers</p><img class="resto" id="Burgers" src="/public/Burgers.jpg" alt=""></div>
          <div><p>Oriental</p><img class="resto" id="Oriental" src="./public/Arabicbest.jpg" alt=""></div>
-         <div><p>Deserts</p><img class="resto" id="Desert" src="/public/desert.jpg" alt=""></div> 
+         <div><p>Dessert</p><img class="resto" id="Dessert" src="/public/desert.jpg" alt=""></div> 
       </div>
    </section>
 
