--- a/pages/resto.html
+++ b/pages/resto.html
@@ -41,7 +41,14 @@
       </div>
 
       <div class="user-rate">
-         <button>Rate your experience</button>
+         <h3>Rate your experience</h3>
+         <select id="rating-value">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+         </select>
       </div>
       
       <div class="user-review">
