Added Front-End verification

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
    <header id="landing-header">
       <div class="banner">
-         <div class="partner">SE Factory Partner's</div>
-         <button id="signup-btn" onclick="window.location.href='pages/signup.html';">Sign up</button>
+         <div class="partner"><img src="./public/SE Icon.png" id="sef-icon"> <p>SE Factory Partner's</p></div>
+         <div>
+            <button id="login-btn" onclick="window.location.href='pages/login.html';">Log in</button>
+            <button id="signup-btn" onclick="window.location.href='pages/signup.html';">Sign up</button></div>
       </div>
       <div class="welcome">
          <nav>
