Added user authentification

--- a/pages/login.html
+++ b/pages/login.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
             <div><input id="bttn" class="login-account" type="button" value="login"  /></div>
+            <div><input class="login-account" type="button" value="Sign Up" onclick="window.location.href='signup.html';"></div>
         </div>
     </div>
 
