--- a/pages/signup.html
+++ b/pages/signup.html
@@ -28,6 +28,7 @@
                 </div>
             </div>
             <div><input id="bttn" class="signup-create-account" type="button" value="Create Account"  /></div>
+            <input class="login-account" type="button" value="login" onclick="window.location.href='login.html';"> 
         </div>
     </div>
 
