--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
          <div>
             <button id="login-btn" onclick="window.location.href='pages/login.html';">Log in</button>
             <button id="signup-btn" onclick="window.location.href='pages/signup.html';">Sign up</button></div>
+            <button id="add_resto" onclick="window.location.href='pages/add-resto.html';">Add resto</button></div>
       </div>
       <div class="welcome">
          <nav>
