--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="welcome">
          <nav>
-            <div class="logo">Tasty Logo</div>
+            <div class="logo"><img height="40px" src="./public/logo1.png" alt=""></div>
             <ul>
                <a href="#">Home</a>
                <a href="#">About Us</a>
@@ -62,14 +62,14 @@
       <h2 class="restaurants-title">Restaurants Categories</h2>
       <p class="restaurants-title">'What would you like to eat today ?'</p> 
       <div class="restaurants">
-         <div><p>Italian</p><img class="resto" id="Italian" src="/public/italian-restaurants-marbella.jpg" alt=""></div>
-         <div><p>SeaFood</p><img class="resto" id="SeaFood" src="/public/SeafoodPlatter_720x.webp" alt=""></div>
-         <div><p>Pizzas</p><img class="resto" id="Pizza" src="/public/pizza.jpg" alt=""></div>
+         <div><p>Italian</p><img class="resto" id="Italian" src="./public/italian-restaurants-marbella.jpg" alt=""></div>
+         <div><p>SeaFood</p><img class="resto" id="SeaFood" src="./public/SeafoodPlatter_720x.webp" alt=""></div>
+         <div><p>Pizzas</p><img class="resto" id="Pizza" src="./public/pizza.jpg" alt=""></div>
       </div>
       <div class="restaurants">
-         <div><p>Burgers</p><img class="resto" id="Burgers" src="/public/Burgers.jpg" alt=""></div>
+         <div><p>Burgers</p><img class="resto" id="Burgers" src="./public/Burgers.jpg" alt=""></div>
          <div><p>Oriental</p><img class="resto" id="Oriental" src="./public/Arabicbest.jpg" alt=""></div>
-         <div><p>Dessert</p><img class="resto" id="Dessert" src="/public/desert.jpg" alt=""></div> 
+         <div><p>Dessert</p><img class="resto" id="Dessert" src="./public/desert.jpg" alt=""></div> 
       </div>
    </section>
 
